--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
             {% for nav_page in sorted_pages %}
             <a class="nav-link" href="{{ nav_page.url | relative_url }}">{{ nav_page.title }}</a>
             {% endfor -%}
+            <a class="nav-link" href="http://clulab.github.io/gentlenlp/">Book</a>
             <a class="nav-link" href="https://github.com/clulab/nlp-reading-group/">Reading Group</a>
           </div>
         </div>
